@@ -1292,6 +1292,9 @@ sub post {
        &update;
        $form->finalize_request();
     }
+    if (!$form->{duedate}){
+          $form->{duedate} = $form->{transdate};
+    }
     $form->isblank( "transdate", $locale->text('Invoice Date missing!') );
     $form->isblank( "customer",  $locale->text('Customer missing!') );
 
