@@ -4,6 +4,7 @@ Supported Presently
 
 Changelog for 1.3.14
 * Argentina (Spanish) translation and charts of accounts added. (Andres B)
+* Fixed errors saving when duedate is blank, bug 3503463 (Chris T)
 
 Andres B is Andres Basile
 
